# Microsimulation-model

./: CMakeLists.txt  Class Design  HealthPredictor.cpp  HealthPredictor.h  Main  Multi-threading  Multithreading.cpp  Multithreading.h  Project Structure  README.md  ReportGenerator.cpp  ReportGenerator.h  Simulation Engine  main.cpp  patient.cpp  patient.h  policy.cpp  policy.h  simulation.cpp  simulation.h  treatment.cpp  treatment.h
Output/: patients_data.csv  population_metrics.txt
Python scripts for Visualization/: analysis.py  dashboard.py  data_loading.py  main.py  predictive_model.py
docs/: architecture.puml  class_diagram.puml  output_diagram.puml  sequence_diagram.puml  use_case_diagram.puml
scripts/: run_simulation.sh
tests/: CMakeLists.txt  test_patient.cpp
